syntax = "proto3";
package comdex.lend.v1beta1;

import "gogoproto/gogo.proto";
import "comdex/lend/v1beta1/lend.proto";


option go_package = "github.com/comdex-official/comdex/x/lend/types";

message LendPairsProposal {
  string title = 1 [(gogoproto.moretags) = "yaml:\"title\""];
  string description = 2 [(gogoproto.moretags) = "yaml:\"description\""];
  Extended_Pair pairs = 3 [(gogoproto.nullable) = false];
}

message MultipleLendPairsProposal {
  string title = 1 [(gogoproto.moretags) = "yaml:\"title\""];
  string description = 2 [(gogoproto.moretags) = "yaml:\"description\""];
  repeated Extended_Pair pairs = 3 [(gogoproto.nullable) = false];
}

message AddPoolsProposal {
  string title = 1 [(gogoproto.moretags) = "yaml:\"title\""];
  string description = 2 [(gogoproto.moretags) = "yaml:\"description\""];
  Pool Pool = 3 [(gogoproto.nullable) = false];
}

message AddAssetToPairProposal {
  string title = 1 [(gogoproto.moretags) = "yaml:\"title\""];
  string description = 2 [(gogoproto.moretags) = "yaml:\"description\""];
  AssetToPairMapping AssetToPairMapping = 3 [(gogoproto.nullable) = false];
}

message AddMultipleAssetToPairProposal {
  string title = 1 [(gogoproto.moretags) = "yaml:\"title\""];
  string description = 2 [(gogoproto.moretags) = "yaml:\"description\""];
  repeated AssetToPairSingleMapping AssetToPairSingleMapping = 3 [(gogoproto.nullable) = false];
}

message AddAssetRatesParams {
  string title = 1 [(gogoproto.moretags) = "yaml:\"title\""];
  string description = 2 [(gogoproto.moretags) = "yaml:\"description\""];
  AssetRatesParams AssetRatesParams = 3 [(gogoproto.nullable) = false];
}

message AddAuctionParamsProposal {
  string title = 1 [(gogoproto.moretags) = "yaml:\"title\""];
  string description = 2 [(gogoproto.moretags) = "yaml:\"description\""];
  AuctionParams AuctionParams = 3 [(gogoproto.nullable) = false];
}

message AddPoolPairsProposal {
  string title = 1 [(gogoproto.moretags) = "yaml:\"title\""];
  string description = 2 [(gogoproto.moretags) = "yaml:\"description\""];
  PoolPairs PoolPairs = 3 [(gogoproto.nullable) = false];
}

message AddAssetRatesPoolPairsProposal {
  string title = 1 [(gogoproto.moretags) = "yaml:\"title\""];
  string description = 2 [(gogoproto.moretags) = "yaml:\"description\""];
  AssetRatesPoolPairs AssetRatesPoolPairs = 3 [(gogoproto.nullable) = false];
}